# EVEMaster

./: CMakeLists.txt
resource/: EVEMaster_zh_CN.ts
source/: main.cpp  mainwindow.ui
